3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

lib/attackmess: Fix missing space in a 'type 17' attack message.
Alex Schultz 2006-08-30

server/player.c: Fix logic error in fire_bow and avoid unnecessary messages.
    Fixes bug #1547699.
Alex Schultz 2006-08-28

Add plugin access to move fields. Add sint64 type to plugin. 'AddExp' wrapper.
 include/plugin.h
 plugins/common/plugin_common.c
 plugins/common/include/plugin_common.h
 server/plugins.c
-----
Add 'object->env' and move_xxx wrappers to Object.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
-----
Add constants for many things. Note that they aren't real constants and can
 be changed from a Python script. But it's the case for everything, so...
 plugins/cfpython/cfpython.c
Ryo 2006-08-27

Removed obsolete 'event' field from object struct, and associated functions.
 common/living.c
 common/loader.[cl]
 common/object.c
 common/treasure.c
 include/libproto.h
 include/object.h
 server/apply.c
 test/unit/common/check_arch.c
Ryo 2006-08-26

server/weather.c: change spurious logic in weather_avoid function.
Ryo 2006-08-26

Hopefully fix weather-related bug.
common/object.c: tentatively fix insert_ob_in_map weird behaviour when
 both INS_MAP_LOAD and INS_ABOVE_FLOOR_ONLY are set.
Ryo 2006-08-26

common/object.c, server/time.c: Make generators work properly with multi-tile objects.
    Fixes bugs #1543220 and #1546835 and also allows generators themself to be multi-tile.
Alex Schultz 2006-08-25

check-fragment.am: Add some quotes to avoid problems with spaces appearing
  in macro expansions.
Raphael Quinet 2006-08-25
	
configure, aclocal.m4, utils/config.guess, utils/config.sub,